# numextenso

./: .gitignore  README.md  pyproject.toml
docs/: COMO_FUNCIONA.md
numextenso/: __init__.py  cli.py  constantes.py  conversor.py  gui.py
